Kubernetes/K8sAzure/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
  labels:
    name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: 4abd73fbf90c4e39aa15.eastus.aksapp.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: contoso-website
            port: 
              name: http
